--- a/style2.css
+++ b/style2.css
@@ -427,6 +427,15 @@ font-family:"Raleway", sans-serif
 .Font-size-S{
     font-size: 1rem; /* Ajustar el tamaño */
 }
+.Font-size-GC{
+    font-size: 25px; /* Ajustar el tamaño */
+}
+.Font-size-MC{
+    font-size: 18px; /* Ajustar el tamaño */
+}
+.Font-size-SC{
+    font-size: 16px; /* Ajustar el tamaño */
+}
 .Font-size-Small{
     font-size: 2.5rem; /* Ajustar el tamaño */
 }
