--- a/style2.css
+++ b/style2.css
@@ -203,9 +203,9 @@ body {
     background-position: top center; 
     margin: 0 auto;
     padding-left: 18%;
-    padding-right: 18%;
-    padding-bottom: 50%;/* Coloca la imagen en la parte superior y centrada */
-    padding-top: 50%;
+    padding-right: 13%;
+    padding-bottom: 13%;/* Coloca la imagen en la parte superior y centrada */
+    padding-top: 18%;
 }
 #Card-Regalo{
     background-color: #F9F7C9;
@@ -245,10 +245,9 @@ body {
    /* background-position: center; /* Centra la imagen */
    /* background-repeat: no-repeat; /* Evita que la imagen se repita */
    width: auto;             /* Anchura del círculo */
-    height: 1200px;           /* Altura del círculo */
+    height:auto;           /* Altura del círculo */
     background-attachment: fixed;
-    margin: 0;
-    height: 100vh;  
+    margin: 0; 
     background-position: top center; 
     margin: 0 auto;/* Coloca la imagen en la parte superior y centrada */
 }
@@ -270,12 +269,12 @@ body {
     background-color: #F9F7C9;
     background-image: url('https://wallpapertag.com/wallpaper/full/0/5/9/539999-blue-flowers-wallpaper-1920x1200-windows-xp.jpg');
     background-size: cover; /* Hace que la imagen cubra todo el fondo */
-    width: auto;             
-    height: 1200px;           
+    width: auto;                       
     background-attachment: fixed;
-    margin: 0;
-    height: 200vh;  
+    margin: 50%;
+    height:auto;  
     background-position: top center; 
+    display: flex;
 }
 
 .container {
@@ -286,7 +285,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between; /* Espacio entre las tarjetas */
     gap: 20px; /* Espaciado entre las columnas */
-    max-width: 2000px; /* Puedes ajustar este valor según el tamaño que desees */
+    max-width: 200px; /* Puedes ajustar este valor según el tamaño que desees */
     margin: 0 auto; /* Centrar el contenedor */
 }
 .center{
@@ -548,9 +547,10 @@ font-family:"Raleway", sans-serif
 .timer {
     display:flex;
     justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+    gap: 2px;
+    margin-top: 0px;
     align-items: center;
+    padding: 50%;
 }
 
 .time-box {
@@ -558,9 +558,9 @@ font-family:"Raleway", sans-serif
     flex-direction:column;
     align-items: center;
     background-color: #ecf0f1;
-    padding: 10px;
+    padding:1px;
     border-radius: 10px;
-    width: 300px;
+    width: 70px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -571,7 +571,7 @@ font-family:"Raleway", sans-serif
 }
 
 .label {
-    font-size: 5rem;
+    font-size: 18PX;
     margin-top: 5px;
     color: #254b6d ;
     font-family: "Parisienne", cursive;
@@ -580,7 +580,7 @@ font-family:"Raleway", sans-serif
 /* Para darle aspecto de calendario */
 .timer {
     background-color: #a4787f;
-    padding: 20px;
+    padding: 5px;
     border-radius: 15px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
     width: fit-content;
